# zk-vrf-consensus

./: readme.md
whitepaper/: byzantine-fault.md  sequencer.md
zk-rand/prover/: Cargo.toml
zk-rand/zk-methods/: Cargo.toml
zk-rand/zk-methods/randomness/: Cargo.toml
