[package]
name = "zk_rand"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "1.2.0", default-features = false, features = ["std"] }
ahash = { version = "=0.8.7", default-features = false, features = [
    "compile-time-rng",
] }
zk-logic = { path = "../../../zk-logic" }
